Modernize code base
- switch to Java 21
- switch to JUnit 6
- update libraries
- update maven plugins