@@ -28,19 +28,19 @@
  */
 package org.hampelratte.svdrp.mock;
 
-import java.util.regex.Matcher;
-import java.util.regex.Pattern;
-
 import org.hampelratte.svdrp.parsers.TimerParser;
 import org.hampelratte.svdrp.responses.highlevel.Timer;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 
+import java.util.regex.Matcher;
+import java.util.regex.Pattern;
+
 public class NewtHandler implements RequestHandler {
 
-    private static transient Logger logger = LoggerFactory.getLogger(NewtHandler.class);
+    private static final Logger logger = LoggerFactory.getLogger(NewtHandler.class);
 
-    private TimerManager timerManager;
+    private final TimerManager timerManager;
 
     public NewtHandler(TimerManager timerManager) {
         super();
@@ -56,9 +56,9 @@ public class NewtHandler implements RequestHandler {
     public String process(String request) {
         Matcher m = Pattern.compile("[Nn][Ee][Ww][Tt] (.*)").matcher(request);
         if (m.matches()) {
-            Timer timer = TimerParser.parse("1 " + m.group(1)).get(0);
+            Timer timer = TimerParser.parse("1 " + m.group(1)).getFirst();
             int id = timerManager.addTimer(timer);
-            logger.info("New Timer ID: {} - {}", id, timer.toString());
+            logger.info("New Timer ID: {} - {}", id, timer);
             return "250 " + id + " " + timer.toNEWT();
         } else {
             return "451 Cannot handle request with NEWT handler";
