@@ -28,41 +28,40 @@
  */
 package org.hampelratte.svdrp.parsers;
 
-import static org.junit.Assert.assertEquals;
-import static org.junit.Assert.assertFalse;
+import org.hampelratte.svdrp.responses.highlevel.DVBChannel;
+import org.junit.jupiter.api.BeforeEach;
+import org.junit.jupiter.api.Test;
 
 import java.util.List;
 
-import org.hampelratte.svdrp.responses.highlevel.DVBChannel;
-import org.junit.Before;
-import org.junit.Test;
+import static org.junit.jupiter.api.Assertions.assertEquals;
+import static org.junit.jupiter.api.Assertions.assertFalse;
 
 // TODO add different channel lines (especially new HD formats)
-public class DVBChannelLineParserTest {
+class DVBChannelLineParserTest {
 
-    private String channelData = "1 Das Erste:11836:B8C23D12M64T2G32Y0:S19.2E:27500:101:102=deu,103=2ch;106=deu:104:0:28106:1:1101:0";
-
-    private ChannelLineParser parser = new DVBChannelLineParser();
+    private final ChannelLineParser parser = new DVBChannelLineParser();
 
     private DVBChannel chan;
 
-    @Before
-    public void parseLine() {
+    @BeforeEach
+    void parseLine() {
+        String channelData = "1 Das Erste:11836:B8C23D12M64T2G32Y0:S19.2E:27500:101:102=deu,103=2ch;106=deu:104:0:28106:1:1101:0";
         chan = (DVBChannel) parser.parse(channelData);
     }
 
     @Test
-    public void testChannelNumber() {
+    void testChannelNumber() {
         assertEquals(1, chan.getChannelNumber());
     }
 
     @Test
-    public void testFrequency() {
+    void testFrequency() {
         assertEquals(11836, chan.getFrequency());
     }
 
     @Test
-    public void testParameters() {
+    void testParameters() {
         assertEquals(8, chan.getBandwidth());
         assertEquals(23, chan.getCodeRateHP());
         assertEquals(12, chan.getCodeRateLP());
@@ -75,38 +74,38 @@ public class DVBChannelLineParserTest {
     }
 
     @Test
-    public void testSource() {
+    void testSource() {
         assertEquals("S19.2E", chan.getSource());
     }
 
     @Test
-    public void testSymbolRate() {
+    void testSymbolRate() {
         assertEquals(27500, chan.getSymbolRate());
     }
 
     @Test
-    public void testVPID() {
+    void testVPID() {
         assertEquals("101", chan.getVPID());
     }
 
     @Test
-    public void testAPID() {
+    void testAPID() {
         assertEquals("102=deu,103=2ch;106=deu", chan.getAPID());
     }
 
     @Test
-    public void testTPID() {
+    void testTPID() {
         assertEquals("104", chan.getTPID());
     }
 
     @Test
-    public void testConditionalAccess() {
-        assertEquals(Integer.valueOf(0), chan.getConditionalAccess().get(0));
+    void testConditionalAccess() {
+        assertEquals(Integer.valueOf(0), chan.getConditionalAccess().getFirst());
 
-        String channelData = "1 Sky Sport 1,Sport1;SKY:12031:HC34M2S0:S19.2E:27500:2047=2:2048=deu@3,2049=deu@3:32:1702,1722,1833,1834,9C4,9C7,9AF,98C,1861:221:133:4:0";
-        DVBChannel chan = (DVBChannel) parser.parse(channelData);
+        String data = "1 Sky Sport 1,Sport1;SKY:12031:HC34M2S0:S19.2E:27500:2047=2:2048=deu@3,2049=deu@3:32:1702,1722,1833,1834,9C4,9C7,9AF,98C,1861:221:133:4:0";
+        DVBChannel channel = (DVBChannel) parser.parse(data);
 
-        List<Integer> caList = chan.getConditionalAccess();
+        List<Integer> caList = channel.getConditionalAccess();
         assertEquals(0x1702, caList.get(0).intValue());
         assertEquals(0x1722, caList.get(1).intValue());
         assertEquals(0x1833, caList.get(2).intValue());
@@ -119,29 +118,29 @@ public class DVBChannelLineParserTest {
     }
 
     @Test
-    public void testReelboxConditionalAccess() {
-        String channelData = "1 SF 1 HD;Schweizer Fernsehen:10971:HC23M5O35S1:S13.0E:29700:502=27:503=deu@3,504=eng@3;505=mul@106:507:S11:17201:318:12300:0";
-        DVBChannel chan = (DVBChannel) parser.parse(channelData);
-        assertEquals(Integer.valueOf(17), chan.getConditionalAccess().get(0));
+    void testReelboxConditionalAccess() {
+        String data = "1 SF 1 HD;Schweizer Fernsehen:10971:HC23M5O35S1:S13.0E:29700:502=27:503=deu@3,504=eng@3;505=mul@106:507:S11:17201:318:12300:0";
+        DVBChannel channel = (DVBChannel) parser.parse(data);
+        assertEquals(Integer.valueOf(17), channel.getConditionalAccess().getFirst());
     }
 
     @Test
-    public void testSID() {
+    void testSID() {
         assertEquals(28106, chan.getSID());
     }
 
     @Test
-    public void testNID() {
+    void testNID() {
         assertEquals(1, chan.getNID());
     }
 
     @Test
-    public void testTID() {
+    void testTID() {
         assertEquals(1101, chan.getTID());
     }
 
     @Test
-    public void testRID() {
+    void testRID() {
         assertEquals(0, chan.getRID());
     }
 }
