@@ -28,61 +28,63 @@
  */
 package org.hampelratte.svdrp.parsers;
 
-import static org.junit.Assert.assertEquals;
+import org.hampelratte.svdrp.responses.highlevel.EPGEntry;
+import org.hampelratte.svdrp.responses.highlevel.Genre;
+import org.hampelratte.svdrp.responses.highlevel.Stream;
+import org.junit.jupiter.api.Test;
 
 import java.util.Calendar;
 import java.util.List;
 
-import org.hampelratte.svdrp.responses.highlevel.EPGEntry;
-import org.hampelratte.svdrp.responses.highlevel.Genre;
-import org.hampelratte.svdrp.responses.highlevel.Stream;
-import org.junit.Test;
+import static org.junit.jupiter.api.Assertions.assertEquals;
 
 
 public class EpgParserTest {
 
-    public static final String epgData =
-            "C S19.2E-133-5-1793 Channel Name\n" +
-                    "E 12667 1274605200 7200 50 FF\n" +
-                    "T Program Title\n" +
-                    "D Lorem ipsum dolor sit amet, consectetur adipisici elit, sed eiusmod tempor incidunt ut labore et dolore magna aliqua.|Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquid ex ea commodi consequat. Quis aute iure reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint obcaecat cupiditat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum..\n" +
-                    "S Lorem ipsum dolor sit amet...\n" +
-                    "G 20 21 80 81\n" +
-                    "X 1 03 deu 16:9\n" +
-                    "X 2 03 deu stereo\n" +
-                    "X 3 01 deu \n" +
-                    "X 2 03 deu ohne Audiodeskription\n" +
-                    "X 5 0B deu 16:9\n" +
-                    "X 4 2C deu Deutsch\n" +
-                    "V 1274605200\n" +
-                    "e\nc";
+    public static final String EPG_DATA = """
+            C S19.2E-133-5-1793 Channel Name
+            E 12667 1274605200 7200 50 FF
+            T Program Title
+            D Lorem ipsum dolor sit amet, consectetur adipisici elit, sed eiusmod tempor incidunt ut labore et dolore magna aliqua.|Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquid ex ea commodi consequat. Quis aute iure reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint obcaecat cupiditat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum..
+            S Lorem ipsum dolor sit amet...
+            G 20 21 80 81
+            X 1 03 deu 16:9
+            X 2 03 deu stereo
+            X 3 01 deu
+            X 2 03 deu ohne Audiodeskription
+            X 5 0B deu 16:9
+            X 4 2C deu Deutsch
+            V 1274605200
+            e
+            c""";
 
     @Test
-    public void testChannelParsing() {
-        List<EPGEntry> entries = new EPGParser().parse(epgData);
-        EPGEntry first = entries.get(0);
+    void testChannelParsing() {
+        List<EPGEntry> entries = new EPGParser().parse(EPG_DATA);
+        EPGEntry first = entries.getFirst();
 
         assertEquals("S19.2E-133-5-1793", first.getChannelID());
         assertEquals("Channel Name", first.getChannelName());
 
-        String epgDataWithoutChannelName =
-                "C S19.2E-133-5-1793\n" +
-                        "E 12667 1274605200 7200 50 FF\n" +
-                        "T Program Title\n" +
-                        "D Lorem ipsum dolor sit amet, consectetur adipisici elit, sed eiusmod tempor incidunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquid ex ea commodi consequat. Quis aute iure reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint obcaecat cupiditat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum..\n" +
-                        "e\nc";
+        String epgDataWithoutChannelName = """
+                C S19.2E-133-5-1793
+                E 12667 1274605200 7200 50 FF
+                T Program Title
+                D Lorem ipsum dolor sit amet, consectetur adipisici elit, sed eiusmod tempor incidunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquid ex ea commodi consequat. Quis aute iure reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint obcaecat cupiditat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum..
+                e
+                c""";
 
         entries = new EPGParser().parse(epgDataWithoutChannelName);
-        first = entries.get(0);
+        first = entries.getFirst();
 
         assertEquals("S19.2E-133-5-1793", first.getChannelID());
         assertEquals("", first.getChannelName());
     }
 
     @Test
-    public void testEntryParsing() {
-        List<EPGEntry> entries = new EPGParser().parse(epgData);
-        EPGEntry first = entries.get(0);
+    void testEntryParsing() {
+        List<EPGEntry> entries = new EPGParser().parse(EPG_DATA);
+        EPGEntry first = entries.getFirst();
 
         assertEquals(12667, first.getEventID());                    // event id
         Calendar calStartTime = Calendar.getInstance();    // start time
@@ -94,64 +96,65 @@ public class EpgParserTest {
         assertEquals(80, first.getTableID());                       // table id
         assertEquals(255, first.getVersion());                      // version
 
-        String epgDataWithoutVersion =
-                "C S19.2E-133-5-1793\n" +
-                        "E 12667 1274605200 7200 50\n" +
-                        "T Program Title\n" +
-                        "D Lorem ipsum dolor sit amet, consectetur adipisici elit, sed eiusmod tempor incidunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquid ex ea commodi consequat. Quis aute iure reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint obcaecat cupiditat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum..\n" +
-                        "e\nc";
+        String epgDataWithoutVersion = """
+                C S19.2E-133-5-1793
+                E 12667 1274605200 7200 50
+                T Program Title
+                D Lorem ipsum dolor sit amet, consectetur adipisici elit, sed eiusmod tempor incidunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquid ex ea commodi consequat. Quis aute iure reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint obcaecat cupiditat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum..
+                e
+                c""";
 
         entries = new EPGParser().parse(epgDataWithoutVersion);
-        first = entries.get(0);
+        first = entries.getFirst();
         assertEquals(0, first.getVersion());
     }
 
     @Test
-    public void testTitleParsing() {
-        List<EPGEntry> entries = new EPGParser().parse(epgData);
-        EPGEntry first = entries.get(0);
+    void testTitleParsing() {
+        List<EPGEntry> entries = new EPGParser().parse(EPG_DATA);
+        EPGEntry first = entries.getFirst();
         assertEquals("Program Title", first.getTitle());
     }
 
     @Test
-    public void testVpsTime() {
-        List<EPGEntry> entries = new EPGParser().parse(epgData);
-        EPGEntry first = entries.get(0);
+    void testVpsTime() {
+        List<EPGEntry> entries = new EPGParser().parse(EPG_DATA);
+        EPGEntry first = entries.getFirst();
         Calendar vpsTime = Calendar.getInstance();
         vpsTime.setTimeInMillis(1274605200 * 1000L);
         assertEquals(vpsTime, first.getVpsTime());
     }
 
     @Test
-    public void testDescription() {
-        List<EPGEntry> entries = new EPGParser().parse(epgData);
-        EPGEntry first = entries.get(0);
+    void testDescription() {
+        List<EPGEntry> entries = new EPGParser().parse(EPG_DATA);
+        EPGEntry first = entries.getFirst();
         String expected = "Lorem ipsum dolor sit amet, consectetur adipisici elit, sed eiusmod tempor incidunt ut labore et dolore magna aliqua.\nUt enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquid ex ea commodi consequat. Quis aute iure reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint obcaecat cupiditat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum..";
         assertEquals(expected, first.getDescription());
 
     }
 
     @Test
-    public void testShortDescription() {
-        List<EPGEntry> entries = new EPGParser().parse(epgData);
-        EPGEntry first = entries.get(0);
+    void testShortDescription() {
+        List<EPGEntry> entries = new EPGParser().parse(EPG_DATA);
+        EPGEntry first = entries.getFirst();
         String expected = "Lorem ipsum dolor sit amet...";
         assertEquals(expected, first.getShortText());
     }
 
     @Test
-    public void testStreamTypes() {
-        List<EPGEntry> entries = new EPGParser().parse(epgData);
-        EPGEntry entry = entries.get(0);
+    void testStreamTypes() {
+        List<EPGEntry> entries = new EPGParser().parse(EPG_DATA);
+        EPGEntry entry = entries.getFirst();
 
         assertEquals(6, entry.getStreams().size());
         assertEquals(3, entry.getAudioStreams().size());
 
-        Stream video16_9 = entry.getStreams().get(0);
-        assertEquals(Stream.CONTENT.MP2V, video16_9.getContent());
-        assertEquals(3, video16_9.getType());
-        assertEquals("deu", video16_9.getLanguage());
-        assertEquals("16:9", video16_9.getDescription());
+        Stream video16to9 = entry.getStreams().getFirst();
+        assertEquals(Stream.CONTENT.MP2V, video16to9.getContent());
+        assertEquals(3, video16to9.getType());
+        assertEquals("deu", video16to9.getLanguage());
+        assertEquals("16:9", video16to9.getDescription());
 
         Stream audioStereo = entry.getStreams().get(1);
         assertEquals(Stream.CONTENT.MP2A, audioStereo.getContent());
@@ -171,11 +174,11 @@ public class EpgParserTest {
         assertEquals("deu", audioWoDesc.getLanguage());
         assertEquals("ohne Audiodeskription", audioWoDesc.getDescription());
 
-        Stream video16_9_2 = entry.getStreams().get(4);
-        assertEquals(Stream.CONTENT.H264, video16_9_2.getContent());
-        assertEquals(0x0B, video16_9_2.getType());
-        assertEquals("deu", video16_9_2.getLanguage());
-        assertEquals("16:9", video16_9_2.getDescription());
+        video16to9 = entry.getStreams().get(4);
+        assertEquals(Stream.CONTENT.H264, video16to9.getContent());
+        assertEquals(0x0B, video16to9.getType());
+        assertEquals("deu", video16to9.getLanguage());
+        assertEquals("16:9", video16to9.getDescription());
 
         Stream ac3 = entry.getStreams().get(5);
         assertEquals(Stream.CONTENT.AC3, ac3.getContent());
@@ -185,30 +188,30 @@ public class EpgParserTest {
     }
 
     @Test
-    public void testGenres() {
-        List<EPGEntry> entries = new EPGParser().parse(epgData);
-        EPGEntry entry = entries.get(0);
+    void testGenres() {
+        List<EPGEntry> entries = new EPGParser().parse(EPG_DATA);
+        EPGEntry entry = entries.getFirst();
         assertEquals(4, entry.getGenres().size());
 
-        Genre genre = entry.getGenres().get(0);
-        assertEquals(0x20, genre.getCode());
-        assertEquals("News/Current affairs", genre.getCategory());
-        assertEquals("news/current affairs (general)", genre.getDescription());
+        Genre genre = entry.getGenres().getFirst();
+        assertEquals(0x20, genre.code());
+        assertEquals("News/Current affairs", genre.category());
+        assertEquals("news/current affairs (general)", genre.description());
 
         genre = entry.getGenres().get(1);
-        assertEquals(0x21, genre.getCode());
-        assertEquals("News/Current affairs", genre.getCategory());
-        assertEquals("news/weather report", genre.getDescription());
+        assertEquals(0x21, genre.code());
+        assertEquals("News/Current affairs", genre.category());
+        assertEquals("news/weather report", genre.description());
 
         genre = entry.getGenres().get(2);
-        assertEquals(0x80, genre.getCode());
-        assertEquals("Social/Political issues/Economics", genre.getCategory());
-        assertEquals("social/political issues/economics (general)", genre.getDescription());
+        assertEquals(0x80, genre.code());
+        assertEquals("Social/Political issues/Economics", genre.category());
+        assertEquals("social/political issues/economics (general)", genre.description());
 
         genre = entry.getGenres().get(3);
-        assertEquals(0x81, genre.getCode());
-        assertEquals("Social/Political issues/Economics", genre.getCategory());
-        assertEquals("magazines/reports/documentary", genre.getDescription());
+        assertEquals(0x81, genre.code());
+        assertEquals("Social/Political issues/Economics", genre.category());
+        assertEquals("magazines/reports/documentary", genre.description());
     }
 }
 
